--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!-- Unit 12 Project
 Requirements
-[  ] $() Select by Element, ID AND Class 
-[  ] Use Three Different jQuery Methods 
-[  ] Add Five CSS Declarations
-[  ] Include Three Images
+[  ] $() Select by Element, ID AND Class
+[ no ] Use Three Different jQuery Methods 
+[ yes ] Add Five CSS Declarations
+[yes  ] Include Three Images
 
 Select ONE Additional 
 [ no ] Feature 1 - Use .addClass() method
@@ -12,7 +12,6 @@ Select ONE Additional
 [ no ] Feature 4 - Use .show() method
 [ no ] Feature 5 - Use .append() method
 -->
-
 
 <!DOCTYPE html>
 <html>
@@ -29,32 +28,57 @@ Select ONE Additional
     <ol>
       <li>
         <h3 id="mem1">Memory #1</h3>
-        <p>More about this memory.</p>
+        <img
+          class="pic"
+          id="earring"
+          src="https://cdn.glitch.global/bb7871d1-4495-4605-bcc7-d10d72c955d5/8c988b9d-355d-4add-9d92-a9385436cedc.download.jpg?v=1733419645002"
+          style="display: none"
+        />
+        <p>Coding this project.</p>
       </li>
 
       <li>
         <h3 id="mem2">Memory #2</h3>
-        <p>More about this memory.</p>
+
+        <img
+          class="pic"
+          id="bluegreen"
+          src="https://cdn.glitch.global/bcd5e9e4-b3f6-45f9-b7fd-bb946b62122b/a3ed8964-dfd5-4182-a4bf-ce36bfb4cef8.D4SJ5KSJBN5J5J7SOVLB4TUUHY.jpg?v=1738776450193"
+          style="display: none"
+        />
+
+        <p>working on the project this image was for.</p>
       </li>
 
       <li>
         <h3 id="mem3">Memory #3</h3>
-        <p>More about this memory</p>
+        <img
+          id="cake"
+          src="https://cdn.glitch.global/3b9bd0a1-cb44-477e-93db-8c0b4d9131c8/54bd963e-9b40-44b6-9d94-43fcd7a80f00.91c336844578ac5bc3d6e5057e2fa7bf.jpg?v=1732640824720"
+          style="display: none"
+        />
+        <p>Doing this birthday themed project</p>
       </li>
     </ol>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script>
       $("#mem1-button").click(function () {
-        $("#mem1").css("color", "purple");
+        $("#mem1").css("color", "DarkRed");
+        $("#");
+        $("#earring").show(2000);
       });
 
       $("#mem2-button").click(function () {
-        $("#mem2").css("color", "blue");
+        $("#mem2").css("color", "LightCoral");
+        $("#");
+        $("#bluegreen").show(2000);
       });
 
       $("#mem3-button").click(function () {
-        $("#mem3").css("color", "green");
+        $("#mem3").css("color", "Thistle");
+        $("h1").text("what word will be there");
+        $("#cake").show(2000);
       });
     </script>
   </body>
